qttools-opensource-src (5.14.2-2) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * Update list of architectures where clang is available: remove
    kfreebsd-any, add riscv64.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 21 Jun 2020 14:38:44 +0300

qttools-opensource-src (5.14.2-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.14.2.
  * Drop both qdoc patches, applied upstream.
  * Enable qwebview designer plugin building on riscv64.
  * Update debian/libqt5designercomponents5.symbols from buildds’ logs.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 29 Apr 2020 14:49:25 +0300

qttools-opensource-src (5.14.1-2) experimental; urgency=medium

  * Fix qdoc handling of -isystem option.
  * Update debian/libqt5designercomponents5.symbols from buildds’ logs.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 01 Mar 2020 16:03:19 +0300

qttools-opensource-src (5.14.1-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.14.1.
  * Install new tools and development files.
  * Update symbols files from the current build log.
  * Update debian/copyright.
  * Update to debhelper compat level 12.
    - Switch to using debhelper-compat as a build dependency.
  * Bump Standards-Version to 4.5.0, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 01 Mar 2020 00:11:40 +0300

qttools-opensource-src (5.12.5-2) unstable; urgency=medium

  * Update debian/libqt5designer5.symbols from buildds’ logs.
  * Bump Standards-Version to 4.4.1, no changes needed.
  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 21 Oct 2019 11:09:36 +0300

qttools-opensource-src (5.12.5-1) experimental; urgency=medium

  * New upstream release.
  * Update the list of architectures where Qt WebKit is available.
  * Bump Qt build-dependencies to 5.12.5.
  * Drop some old (pre-Stretch) Breaks/Replaces.
  * Install the new Qt5UiPlugin header-only library.