@@ -3,6 +3,7 @@ qttools-opensource-src (5.14.2-2) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * Update list of architectures where clang is available: remove
     kfreebsd-any, add riscv64.
+  * Use debian/clean instead of overriding dh_auto_clean.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 21 Jun 2020 14:38:44 +0300
 
